<resources>
    <string name="app_name">Veterinarians Apps</string>
    <string name="opening"><b>Bingung mau cari rumah sakit untuk hewanmu?\n\n</b>
        Temukan disini!
    </string>
    <string name="Veterinarian">Veterinarian</string>
    <string name="nameVet">Dokter Hewan Ammar</string>
    <string name="cityVet">Jakarta Timur</string>
    <string name="openHoursVet">09.00</string>
    <string name="closeHoursVet">17.00</string>
    <string name="buka">Buka</string>
    <string name="tutup">Tutup</string>
    <string name="addressVet">Jl. Raya Cilangkap No.140, Cilangkap, Kec. Cipayung, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13870</string>
    <string name="phoneVet">081211557242</string>
    <string name="jamBuka">Jam Buka</string>
    <string name="jamTutup">Jam Tutup</string>
    <string name="buka_di_google_maps">Buka di Google Maps</string>
    <string name="share">Share</string>

</resources>