<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/rectangle2"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/imgCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">
    <ImageView
        android:id="@+id/tvVetPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@tools:sample/avatars"
        android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvVetName"
        android:layout_toRightOf="@+id/imgCard"
        android:layout_marginLeft="16dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/nameVet"
        android:textSize="18sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/tvVetCity"
        android:layout_toRightOf="@+id/imgCard"
        android:layout_below="@+id/tvVetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textRingan"
        android:text="@string/cityVet" />

    <TextView
        android:id="@+id/tvBuka"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/buka"
        android:layout_marginTop="12dp"
        android:layout_below="@id/tvVetCity"
        android:layout_toRightOf="@id/imgCard"
        style="@style/textRingan"/>

    <TextView
        android:id="@+id/tvOpenHoursVet"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        style="@style/textRingan"
        android:layout_marginTop="2dp"
        android:text="@string/openHoursVet"
        android:layout_toRightOf="@id/imgCard"
        android:layout_below="@id/tvBuka"/>

    <TextView
        android:id="@+id/tvTutup"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/tutup"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@id/tvVetCity"
        android:layout_toRightOf="@id/tvBuka"
        style="@style/textRingan"/>

    <TextView
        android:id="@+id/tvCloseHoursVet"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        style="@style/textRingan"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="12dp"
        android:text="@string/closeHoursVet"
        android:layout_toRightOf="@id/tvOpenHoursVet"
        android:layout_below="@id/tvTutup"/>




</RelativeLayout>